--- a/notebooks/1_extended_evaluation.ipynb
+++ b/notebooks/1_extended_evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,37 +31,37 @@
     "        return x\n",
     "import torch\n",
     "model = MLP().cuda()\n",
-    "model.load_state_dict(torch.load('smoking_data/retrained_model.pt'))"
+    "model.load_state_dict(torch.load('data/smoking_data/retrained_model.pt'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "df = pd.read_csv(f'20/raw_data.csv',header=None)\n",
+    "df = pd.read_csv(f'data/andrew-data/20/raw_data.csv',header=None)\n",
     "df = df[[2,3,4]]\n",
     "df_np = df.to_numpy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "with open(f'20/20_data.json','r') as f:\n",
+    "with open(f'data/andrew-data/20/20_data.json','r') as f:\n",
     "    data = json.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,33 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 2.5488281, -1.5224609,  9.0703125],\n",
-       "       [ 2.53125  , -1.5195312,  8.9921875],\n",
-       "       [ 2.5488281, -1.5175781,  9.0390625],\n",
-       "       ...,\n",
-       "       [ 1.4765625,  5.6523438,  8.890625 ],\n",
-       "       [ 1.3476562,  5.6210938,  8.4296875],\n",
-       "       [ 0.6845703,  5.6289062,  8.1484375]])"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_dm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +89,7 @@
        " {'start': 149459, 'end': 149882}]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
