--- a/baseline_mlp_cv.ipynb
+++ b/baseline_mlp_cv.ipynb
@@ -36,7 +36,7 @@
    ],
    "source": [
     "window_size = 101\n",
-    "trainloader,devloader,test_idx = load_data_cv(foldi=0)\n",
+    "trainloader,devloader,_ = load_data_cv(foldi=0)\n",
     "device = 'cuda'\n",
     "model = MLP(window_size=window_size).to(device=device)\n",
     "criterion = nn.BCEWithLogitsLoss()\n",
