--- a/baseline_cv.ipynb
+++ b/baseline_cv.ipynb
@@ -6,32 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from lib.imports import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "skip_idx = [19,24,26,32,34,38,40,45,52,55,70]\n",
-    "all_idx = list(range(71))\n",
-    "\n",
-    "for idx in skip_idx:\n",
-    "    all_idx.remove(idx)\n",
-    "\n",
-    "import random\n",
-    "random.seed(0)\n",
-    "random.shuffle(all_idx)\n",
-    "k_folds = 5\n",
-    "foldi = 0\n",
-    "fold_size = int(len(all_idx)/k_folds)\n",
-    "test_idx = all_idx[foldi*fold_size:(foldi+1)*fold_size]\n",
-    "\n",
-    "for idx in test_idx:\n",
-    "    all_idx.remove(idx)\n",
-    "train_idx = all_idx"
+    "from lib.utils import *\n",
+    "from lib.models import *\n",
+    "from tqdm import tqdm\n",
+    "from torch import nn"
    ]
   },
   {
@@ -41,29 +19,9 @@
    "outputs": [],
    "source": [
     "window_size = 101\n",
-    "X,y = load_and_window_nursing_list_for_convolution(train_idx,window_size=window_size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train,X_dev,y_train,y_dev = train_test_split(X,y,test_size=.05,stratify=y)\n",
-    "trainloader = DataLoader(TensorDataset(X_train,y_train),batch_size=64,shuffle=True)\n",
-    "devloader = DataLoader(TensorDataset(X_dev,y_dev),batch_size=64,shuffle=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from torch import nn\n",
+    "trainloader,devloader,test_idx = load_data_cv(foldi=0)\n",
     "device = 'cuda'\n",
-    "model = FCN().to(device=device)\n",
+    "model = MLP(window_size=window_size).to(device=device)\n",
     "criterion = nn.BCEWithLogitsLoss()\n",
     "optimizer = torch.optim.Adam(model.parameters())\n",
     "params = sum([p.flatten().size()[0] for p in list(model.parameters())])\n",
@@ -114,23 +72,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import f1_score,recall_score\n",
+    "from sklearn.metrics import f1_score,recall_score,precision_score\n",
     "f1i = []\n",
     "recalli = []\n",
+    "precisioni = []\n",
     "for idx in test_idx:\n",
-    "    X,y = load_and_window_nursing_list_for_convolution([idx])\n",
+    "    X,y = load_and_window_nursing_list([idx])\n",
     "    loss,y_true,y_pred = test_evaluation(DataLoader(TensorDataset(X,y),batch_size=32,shuffle=True),model,criterion,plot=True)\n",
     "    f1i.append(f1_score(y_true=y_true,y_pred=y_pred.round(),average='macro'))\n",
-    "    recalli.append(recall_score(y_true=y_true,y_pred=y_pred.round(),average='macro'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "recalli"
+    "    recalli.append(recall_score(y_true=y_true,y_pred=y_pred.round(),average='macro'))\n",
+    "    precisioni.append(precision_score(y_true=y_true,y_pred=y_pred.round(),average='macro'))"
    ]
   },
   {
@@ -140,6 +91,7 @@
    "outputs": [],
    "source": [
     "sns.kdeplot(recalli,bw_adjust=.4)\n",
+    "sns.rugplot(recalli)\n",
     "print(torch.tensor(recalli).mean()) #.4958\n",
     "print(torch.tensor(recalli).std()) #.0063"
    ]
@@ -150,8 +102,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X,y = load_and_window_nursing_list_for_convolution(test_idx)\n",
-    "loss,y_true,y_pred = test_evaluation(DataLoader(TensorDataset(X,y),batch_size=32,shuffle=True),model,criterion,plot=True)"
+    "sns.kdeplot(f1i,bw_adjust=.4)\n",
+    "sns.rugplot(f1i)\n",
+    "print(torch.tensor(f1i).mean()) #.4958\n",
+    "print(torch.tensor(f1i).std()) #.0063"
    ]
   },
   {
@@ -160,7 +114,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f1_score(y_true=y_true,y_pred=y_pred.round(),average='macro')"
+    "sns.kdeplot(precisioni,bw_adjust=.4)\n",
+    "sns.rugplot(precisioni)\n",
+    "print(torch.tensor(precisioni).mean()) #.4958\n",
+    "print(torch.tensor(precisioni).std()) #.0063"
    ]
   },
   {
@@ -169,7 +126,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recall_score(y_true=y_true,y_pred=y_pred.round(),average='macro')"
+    "from sklearn.metrics import f1_score,recall_score,precision_score\n",
+    "X,y = load_and_window_nursing_list(test_idx)\n",
+    "loss,y_true,y_pred = test_evaluation(DataLoader(TensorDataset(X,y),batch_size=32,shuffle=True),model,criterion,plot=True)\n",
+    "print(f1_score(y_true=y_true,y_pred=y_pred.round(),average='macro'))\n",
+    "print(recall_score(y_true=y_true,y_pred=y_pred.round(),average='macro'))\n",
+    "print(precision_score(y_true=y_true,y_pred=y_pred.round(),average='macro'))"
    ]
   }
  ],
