--- a/view_data.ipynb
+++ b/view_data.ipynb
@@ -2,18 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_csv(f'../data/nursing/5/raw_data.csv',header=None)\n",
-    "df[7] = df[7].astype('datetime64')\n",
-    "print(df[7][len(df)-1]-df[7][0])\n",
-    "hypothesized_fs = 100\n",
-    "print((len(df)/hypothesized_fs)/60)\n",
+    "dir = f'2022-09-24_02_31_45'\n",
+    "df = pd.read_csv(f'{dir}/raw/{dir}.0.csv',skiprows=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import plotly.express as px\n",
-    "fig = px.line(df)\n",
+    "fig = px.line(df,y=['acc_x','acc_y','acc_z'])\n",
     "fig.show(renderer='browser')"
    ]
   }
@@ -25,7 +30,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.6"
   },
   "orig_nbformat": 4,
