add changes from sigma

--- a/notebooks/baseline_iid.ipynb
+++ b/notebooks/baseline_iid.ipynb
@@ -4,21 +4,48 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/andrew/.local/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from lib.utils import *\n",
     "from lib.models import *\n",
     "from tqdm import tqdm\n",
     "from torch import nn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X,y = load_nursing_by_index(0)\n",
+    "X,y = window_nursing(X,y,window_size=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[3.0703, 3.1309, 3.0723,  ..., 9.7578, 9.8984, 9.5312],\n",
+       "        [3.1309, 3.0723, 3.0996,  ..., 9.8984, 9.5312, 9.7031],\n",
+       "        [3.0723, 3.0996, 3.0078,  ..., 9.5312, 9.7031, 9.6484],\n",
+       "        ...,\n",
+       "        [0.7490, 0.8545, 0.7637,  ..., 9.1094, 8.8203, 9.0547],\n",
+       "        [0.8545, 0.7637, 0.6748,  ..., 8.8203, 9.0547, 8.9062],\n",
+       "        [0.7637, 0.6748, 0.8330,  ..., 9.0547, 8.9062, 9.2031]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
    ]
   },
   {
@@ -37,12 +64,95 @@
    "source": [
     "window_size = 101\n",
     "trainloader,devloader,testloader = load_data_convolution(n=2)\n",
-    "device = 'cuda'\n",
+    "device = 'mps'\n",
     "model = ResNet().to(device=device)\n",
     "criterion = nn.BCEWithLogitsLoss()\n",
     "optimizer = torch.optim.Adam(model.parameters())\n",
     "params = sum([p.flatten().size()[0] for p in list(model.parameters())])\n",
     "print(\"Params: \",params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [1.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.],\n",
+       "        [0.]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X,y = next(iter(trainloader))\n"
    ]
   },
   {
@@ -257,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.4"
   },
   "orig_nbformat": 4,
   "vscode": {
