--- a/notebooks/data.ipynb
+++ b/notebooks/data.ipynb
@@ -2,76 +2,63 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os\n",
-    "import plotly.express as px"
+    "import plotly.express as px\n",
+    "def load_delta(recording,DATA_PATH):\n",
+    "    df = pd.read_csv(f'{DATA_PATH}/{recording}/raw/{recording}.0.csv',skiprows=1)\n",
+    "    df = df.reset_index()\n",
+    "    df['index'] = df['index']/20/60\n",
+    "    print(f'Loading: {recording}')\n",
+    "    print(f'Length: {len(df)/1200:.2f} minutes')\n",
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.0183333333333335\n",
-      "2023-06-01_11_55_55\n",
-      "2\n"
+      "Loading: 2022-11-23_14_58_43\n",
+      "Length: 252.70 minutes\n"
      ]
     }
    ],
    "source": [
-    "person = f'data/files'\n",
-    "files = os.listdir(f'../{person}/')\n",
-    "idx = 0\n",
-    "sesh1 = pd.read_csv(f'../{person}/{files[idx]}/raw/{files[idx]}.0.csv',skiprows=1)\n",
-    "\n",
-    "print(len(sesh)/20/60)\n",
-    "print(files[idx])\n",
-    "print(len(files))\n",
-    "fig = px.line(sesh,y=['acc_x','acc_y','acc_z'])\n",
+    "DATA_PATH = f'/home/andrew/smoking/data/winnie'\n",
+    "recordings = os.listdir(f'{DATA_PATH}')\n",
+    "df = load_delta(recordings[8],DATA_PATH=DATA_PATH)\n",
+    "fig = px.line(df.iloc[::2],x='index',y=['acc_x','acc_y','acc_z'])\n",
     "fig.show(renderer='browser')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sesh = sesh.iloc[100:-100].reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "56.965\n",
-      "2023-06-02_12_15_59\n",
-      "19\n"
+      "Loading: 2023-02-11_13_51_34\n",
+      "Length: 293.71 minutes\n"
      ]
     }
    ],
    "source": [
-    "person = f'data/riley'\n",
-    "files = os.listdir(f'../{person}/')\n",
-    "idx = 3\n",
-    "surrogate = pd.read_csv(f'../{person}/{files[idx]}/raw/{files[idx]}.0.csv',skiprows=1)\n",
-    "print(len(surrogate)/20/60)\n",
-    "print(files[idx])\n",
-    "print(len(files))\n",
-    "fig = px.line(surrogate,y=['acc_x','acc_y','acc_z'])\n",
+    "DATA_PATH = f'/home/andrew/smoking/data/thrasher'\n",
+    "recordings = os.listdir(f'{DATA_PATH}')\n",
+    "df = load_delta(recordings[5],DATA_PATH=DATA_PATH)\n",
+    "fig = px.line(df.iloc[::2],x='index',y=['acc_x','acc_y','acc_z'])\n",
     "fig.show(renderer='browser')"
    ]
   },
@@ -124,7 +111,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.12 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -138,9 +125,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.12"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
