--- a/notebooks/prototype.ipynb
+++ b/notebooks/prototype.ipynb
@@ -6,6 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "lying down\n",
+    "lounging\n",
+    "walking\n",
+    "\"\"\"\n",
+    "\n",
     "import torch\n",
     "from torch import nn\n",
     "from lib.nursing import *\n",
@@ -340,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4,
   "vscode": {
