--- a/main.ipynb
+++ b/main.ipynb
@@ -2,86 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
     "import plotly.express as px\n",
-    "from lib.env import *\n",
-    "def run_new_state_machine_on_thresholded_predictions(predictions):\n",
-    "    state = 0\n",
-    "    states = []\n",
-    "    puff_locations = []\n",
-    "    currentInterPuffIntervalLength = 0\n",
-    "    currentPuffLength = 0\n",
-    "    for i,smokingOutput in enumerate(predictions):\n",
-    "        states.append(state)\n",
-    "        if (state == 0 and smokingOutput == 0.0):\n",
-    "            # no action\n",
-    "            state = 0\n",
-    "        elif (state == 0 and smokingOutput == 1.0):\n",
-    "            # starting validating puff length\n",
-    "            state = 1\n",
-    "            currentPuffLength += 1\n",
-    "        elif (state == 1 and smokingOutput == 1.0):\n",
-    "            # continuing not yet valid length puff\n",
-    "            currentPuffLength += 1\n",
-    "            if (currentPuffLength > 14) :\n",
-    "                # valid puff length!\n",
-    "                state = 2\n",
-    "        elif (state == 1 and smokingOutput == 0.0):\n",
-    "            # never was a puff, begin validating end\n",
-    "            state = 3\n",
-    "            currentInterPuffIntervalLength += 1\n",
-    "        elif (state == 2 and smokingOutput == 1.0):\n",
-    "            # continuing already valid puff\n",
-    "            currentPuffLength += 1\n",
-    "        elif (state == 2 and smokingOutput == 0.0):\n",
-    "            # ending already valid puff length\n",
-    "            state = 4 # begin validating inter puff interval\n",
-    "            currentInterPuffIntervalLength += 1\n",
-    "        elif (state == 3 and smokingOutput == 0.0): \n",
-    "            currentInterPuffIntervalLength += 1\n",
-    "            if (currentInterPuffIntervalLength > 49):\n",
-    "                # valid interpuff\n",
-    "                state = 0\n",
-    "                currentPuffLength = 0\n",
-    "                currentInterPuffIntervalLength = 0\n",
-    "        elif (state == 3 and smokingOutput == 1.0):\n",
-    "            # was validating interpuff for puff that wasn't valid\n",
-    "            currentPuffLength += 1\n",
-    "            currentInterPuffIntervalLength = 0\n",
-    "            if (currentPuffLength > 14) :\n",
-    "                # valid puff length!\n",
-    "                state = 2\n",
-    "            else:\n",
-    "                state = 1\n",
-    "        elif (state == 4 and smokingOutput == 0.0) :\n",
-    "            currentInterPuffIntervalLength += 1\n",
-    "            if (currentInterPuffIntervalLength > 49):\n",
-    "                # valid interpuff for valid puff\n",
-    "                state = 0\n",
-    "                currentPuffLength = 0\n",
-    "                currentInterPuffIntervalLength = 0\n",
-    "                puff_locations.append(i)\n",
-    "        elif (state == 4 and smokingOutput == 1.0):\n",
-    "            # back into puff for already valid puff\n",
-    "            currentInterPuffIntervalLength = 0\n",
-    "            currentPuffLength += 1\n",
-    "            state = 2\n",
-    "    states = states[1:] + [0]\n",
-    "    return states,puff_locations"
+    "from lib.env import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATASET_PATH = f'{DATA_PATH}/riley'\n",
+    "DATASET_PATH = f'{DATA_PATH}/winnie'\n",
     "RECORDING_IDS = os.listdir(DATASET_PATH)\n",
     "RECORDING_PATH = f'{DATASET_PATH}/{RECORDING_IDS[0]}/raw/{RECORDING_IDS[0]}.0.csv'\n",
     "df = pd.read_csv(RECORDING_PATH,skiprows=1)\n",
@@ -93,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,21 +67,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/60564 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 60564/60564 [00:04<00:00, 14313.52it/s]\n"
+      "100%|██████████| 104087/104087 [00:09<00:00, 10992.88it/s]\n"
      ]
     }
    ],
@@ -256,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.12"
   },
   "orig_nbformat": 4,
   "vscode": {
